# Psi-MCP

./: Dockerfile  README.md  package.json  pyproject.toml  requirements.txt  smithery.yaml
.claude/: settings.local.json
src/: server.py
src/quantum/: __init__.py  algorithms.py  chemistry.py  circuits.py  field_theory.py  many_body.py  ml.py  systems.py  tensor_networks.py  utils.py  visualization.py
