[build-system]
requires = ["setuptools>=61.0", "wheel", "cython>=3.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "psi-mcp"
version = "1.0.0"
description = "Advanced quantum systems MCP server for complex open and closed quantum systems calculations"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Manas Pandey", email = "manas@example.com"}
]
maintainers = [
    {name = "Manas Pandey", email = "manas@example.com"}
]
keywords = [
    "quantum-computing",
    "quantum-physics", 
    "quantum-chemistry",
    "many-body-physics",
    "quantum-machine-learning",
    "mcp-server",
    "smithery"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "qiskit>=0.45.0",
    "qutip>=4.7.0",
    "openfermion>=1.6.0",
    "pennylane>=0.33.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.6.0",
]
full = [
    "qiskit-aer>=0.13.0",
    "qiskit-algorithms>=0.3.0",
    "qiskit-nature>=0.7.0",
    "cirq>=1.3.0",
    "pyscf>=2.5.0",
    "tensorflow-quantum>=0.7.3",
    "torch>=2.0.0",
    "netket>=3.9.0",
    "mitiq>=0.30.0",
]
gpu = [
    "cupy-cuda11x>=12.0.0",
    "torch[cuda]>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/manasp21/Psi-MCP"
Repository = "https://github.com/manasp21/Psi-MCP.git"
Issues = "https://github.com/manasp21/Psi-MCP/issues"
Documentation = "https://github.com/manasp21/Psi-MCP/blob/main/README.md"

[project.scripts]
psi-mcp = "src.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_third_party = ["numpy", "scipy", "matplotlib", "qiskit", "cirq", "pennylane", "qutip"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist", ".eggs"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "quantum: marks tests as quantum computing related",
    "integration: marks tests as integration tests",
]